--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     environment:
       - DEBUG=1
       - DATABASE_URL=postgres://postgres:postgres@db:5432/apra_nova_db
+    networks:
+      - proxy  # Connect your app to the proxy network
 
   db:
     image: postgres:13
@@ -25,9 +27,48 @@ services:
       POSTGRES_DB: apra_nova_db
     ports:
       - "5432:5432"
+    networks:
+      - proxy
 
   redis:
     image: redis:alpine
     ports:
       - "6379:6379"
+    networks:
+      - proxy
+
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    container_name: nginx-proxy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./certs:/etc/nginx/certs:ro
+      - ./vhost.d:/etc/nginx/vhost.d
+      - ./html:/usr/share/nginx/html
+    networks:
+      - proxy
+
+  letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: nginx-proxy-letsencrypt
+    restart: unless-stopped
+    depends_on:
+      - nginx-proxy
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./certs:/etc/nginx/certs:rw
+      - ./vhost.d:/etc/nginx/vhost.d
+      - ./html:/usr/share/nginx/html
+    environment:
+      - NGINX_PROXY_CONTAINER=nginx-proxy
+    networks:
+      - proxy
+
+networks:
+  proxy:
+    driver: bridge
 
