--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-allauth==65.12.0
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+docker==7.1.0
 drf-yasg==1.21.11
 filelock==3.20.0
 identify==2.6.15
@@ -24,6 +25,7 @@ pre_commit==4.3.0
 psycopg2-binary==2.9.10
 pycparser==2.23
 PyJWT==2.10.1
+pywin32; platform_system == "Windows"
 python-decouple==3.8
 pytz==2025.2
 PyYAML==6.0.3
