--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,8 @@ pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
 sqlparse==0.5.3
+stripe==13.0.1
+typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
