--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ djangorestframework_simplejwt==5.5.1
 docker==7.1.0
 drf-yasg==1.21.11
 filelock==3.20.0
+gunicorn==23.0.0
 identify==2.6.15
 idna==3.10
 inflection==0.5.1
