--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,45 @@
-
 version: '3.9'
 
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/app
-    ports:
-      - "8000:8000"
+    container_name: django-backend
+    command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
     depends_on:
       - db
       - redis
     environment:
       - DEBUG=1
-      - DATABASE_URL=postgres://postgres:postgres@db:5432/apra_nova_db
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/apra_nova_db
+      - VIRTUAL_HOST=backend.localhost
+      - VIRTUAL_PORT=8000        # <-- Required for nginx-proxy routing
+      - LETSENCRYPT_HOST=backend.localhost
+      - LETSENCRYPT_EMAIL=dev@localhost
+      - BASE_DOMAIN=apranova.com
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    expose:
+      - "8000"
     networks:
-      - proxy  # Connect your app to the proxy network
+      - proxy
 
   db:
     image: postgres:13
+    container_name: postgres-db
     restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: apra_nova_db
-    ports:
-      - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
     networks:
       - proxy
 
   redis:
     image: redis:alpine
-    ports:
-      - "6379:6379"
+    container_name: redis-cache
+    restart: always
     networks:
       - proxy
 
@@ -43,7 +49,8 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
-      - "443:443"
+    environment:
+      - DEFAULT_HOST=backend.localhost
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - ./certs:/etc/nginx/certs:ro
@@ -52,23 +59,9 @@ services:
     networks:
       - proxy
 
-  letsencrypt:
-    image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: nginx-proxy-letsencrypt
-    restart: unless-stopped
-    depends_on:
-      - nginx-proxy
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./certs:/etc/nginx/certs:rw
-      - ./vhost.d:/etc/nginx/vhost.d
-      - ./html:/usr/share/nginx/html
-    environment:
-      - NGINX_PROXY_CONTAINER=nginx-proxy
-    networks:
-      - proxy
-
 networks:
   proxy:
     driver: bridge
 
+volumes:
+  db_data:
