--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,8 @@ tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 virtualenv==20.35.3
+Django>=4.2
+gunicorn
+psycopg2-binary
+dj-database-url
+redis
